[project]

name = "totypes"
version = "0.0.0"
description = "Custom datatypes useful in a topology optimization context"
keywords = ["topology", "optimization", "jax", "inverse design"]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

authors = [
    {name = "Martin Schubert", email = "mfschubert@gmail.com"},
]
maintainers = [
    {name = "Martin Schubert", email = "mfschubert@gmail.com"},
]

dependencies = [
    "jax",
    "jaxlib",
    "numpy",
]

[project.optional-dependencies]
tests = [
    "optax",
    "parameterized",
    "pytest",
    "pytest-cov",
]
dev = [
    "bump-my-version",
    "darglint",
    "totypes[tests]",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"invrs_gym" = ["py.typed"]

[tool.pytest.ini_options]
addopts = [
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]
pythonpath = [
  "src",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.pydocstyle]
inherit = false
convention = "google"
